# backend/app/schemas/folder.py
@@ -1,0 +1,7 @@
+from pydantic import BaseModel
+
+
+class FolderCreateRequest(BaseModel):
+    folder_name: str
+    image_ids: list[int]
+    description: str = ""
